# math-optim-rs-verify

./: .editorconfig  .gitignore  .nvim.lua  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml  code-quality.yml  verify.yml
