[package]
name = "math-optim-verify"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
algebrae = { git = "https://github.com/chiaoicchi/math-optim-rs", subdirectory = "crates/algebrae" }
data-strux = { git = "https://github.com/chiaoicchi/math-optim-rs", subdirectory = "crates/data-strux" }
graphia = { git = "https://github.com/chiaoicchi/math-optim-rs", subdirectory = "crates/graphia" }
geome = { git = "https://github.com/chiaoicchi/math-optim-rs", subdirectory = "crates/geome" }
seqenz = { git = "https://github.com/chiaoicchi/math-optim-rs", subdirectory = "crates/seqenz" }
